# SimplyComplex

./: .gitignore  .pre-commit-config.yaml  .pydocstyle  .pylintrc  CMakeLists.txt  README.md  SimplyComplex.c  gpu_complex.h.tmp  hirep_mod.py  hirep_modification.py  operator_overloads.py  operator_overloads_header.py  tests.cu  timing.cu  write_complex_struct.py
docs/: conf.py  index.rst  operator_overloads.rst  write_complex_struct.rst
